RESOLVED FIXED 78850
[chromium] Empty divs not transforming overflow correctly
https://bugs.webkit.org/show_bug.cgi?id=78850
Summary [chromium] Empty divs not transforming overflow correctly
Dana Jansens
Reported 2012-02-16 15:12:44 PST
[chromium] Empty divs not transforming overflow correctly
Attachments
Patch (4.75 KB, patch)
2012-02-16 15:13 PST, Dana Jansens
no flags
Dana Jansens
Comment 1 2012-02-16 15:13:37 PST
WebKit Review Bot
Comment 2 2012-02-16 17:28:18 PST
The commit-queue encountered the following flaky tests while processing attachment 127453 [details]: perf/object-keys.html bug 63769 (author: ojan@chromium.org) The commit-queue is continuing to process your patch.
WebKit Review Bot
Comment 3 2012-02-16 17:30:43 PST
Comment on attachment 127453 [details] Patch Clearing flags on attachment: 127453 Committed r108007: <http://trac.webkit.org/changeset/108007>
WebKit Review Bot
Comment 4 2012-02-16 17:30:48 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.