[chromium] Empty divs not transforming overflow correctly https://bugs.webkit.org/show_bug.cgi?id=78850

Patch by Dana Jansens <danakj@chromium.org> on 2012-02-16
Reviewed by James Robinson.

Source/WebCore:

Test: compositing/overflow/transform-in-empty-container.html

* platform/graphics/chromium/GraphicsLayerChromium.cpp:
(WebCore::GraphicsLayerChromium::setSize):

LayoutTests:

* compositing/overflow/transform-in-empty-container-expected.png: Added.
* compositing/overflow/transform-in-empty-container-expected.txt: Added.
* compositing/overflow/transform-in-empty-container.html: Added.

Canonical link: https://commits.webkit.org/95841@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@108007 268f45cc-cd09-0410-ab3c-d52691b4dbfc